style: safari z-index bug fix

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -157,6 +157,7 @@
   position: relative;
   background-color: $colour-white;
   margin-bottom: 150px;
+  -webkit-transform: translate3d(0,0,0); // Safari z-index fix
   z-index: 5;
   filter: drop-shadow(0 0 4px rgba($colour-grey-bravo, 0.6));
 
